Bug 623447 - ASSERTION: AreDialogsBlocked() called without a top window, r=jst a=jonas